@@ -16,6 +16,8 @@
 
     - each set_prop call now logs what's actually changed
     - added item oid (type:group/item_id) - reserved for the future releases
+    - added stop_on_critical option in config (default: yes),
+       server will be restarted via safe-run if critical exception occur
 
 3.0.1
     Minor release with some urgent features
